--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MoodTracker</string>
+    <string name="happy_mood">Happy</string>
+    <string name="alone">Alone</string>
+
 </resources>
