added search activity UI

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoodTracker</string>
+    <string name="search_hint">search for a user</string>
+    <string name="search_button_text">search</string>
 </resources>
