--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="create_account_clickable_text">Account Clickable</string>
     <string name="create_account_prompt_string">Create Account</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
