--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MoodTracker</string>
+    <string name="mood_event">Mood Event</string>
     <string name="search_hint">search for a user</string>
     <string name="search_button_text">search</string>
     <string name="title_activity_map">Map</string>
@@ -14,6 +15,12 @@
     <string name="login_failed">"Login failed"</string>
     <string name="happy_mood">Happy</string>
     <string name="alone">Alone</string>
+    <string name="edit">Edit</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="reason">Reason</string>
+    <string name="done">Done</string>
+    <string name="username">Username</string>
     <string name="create_account_clickable_text">Account Clickable</string>
     <string name="create_account_prompt_string">Create Account</string>
 
